

Name: Harmoni ChangeLog


v. 0.4.0 (The Nebulous Future)
----------------------------------------------------
		
	* Change: Added retrieval of $_FILES-type data to the RequestContext and RequestHandler classes. (Gabe Schine)
		
	* Change: Updated DR module to use new DataManager. (Gabe Schine)
		
	* Bug Fix: Fixed a number of bugs in the Primitive and StorablePrimitive classes. (Gabe Schine)
		
	* Bug Fix: Fixed ISO date and time string parsers. (Gabe Schine)
		
	* New feature: DBHandler and Databases now implement a getTableList() function. (Gabe Schine)
		
	* New feature: #102448 Implemented (but did not yet test) Oracle database connectivity. (Gabe Schine)
		
	* Change: Changed DBHandler's toDBDate functionality to automatically format and include quotations if necessary for the specific DB type. This became a problem for Oracle databases where a function call is necessary for date storage. (Gabe Schine)
		
	* New feature: Added getStringName() to the Database interface and added a method in the DBHandler to allows access to the string name based on the database index. (Gabe Schine)
		
	* Change: All DataManager database queries now free() their results after processing. (Gabe Schine)
		
	* New feature: GUIManager now allows for the setting of pre and post HTML. These are HTML tags that need to surround a compontent. This is primarily used to properly nest form-tags around tables/divs to generate valid XHTML. (Adam Franco)
		
	* Bug Fix: Repaired many PHP notices. (Adam Franco)
		
	* Bug Fix: Repaired many PHP notices. (Gabe Schine)
		
	* Bug Fix: Repaired many PHP notices. (Niraj Dhungel)
		
	* Bug Fix: The hierarchy cache had a problem where _isCached() was called as a property instead of a method, square brackets [] versus parenthasis (), and was breaking the cache by creating nodes that were listed as children of other nodes, but did not have their parents listed. (Adam Franco)
		