@@ -4,11 +4,27 @@
 	h1 {font-size: 18pt;}
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Harmoni ChangeLog</h1><h2>Version 0.4.0</h2><h3>The Nebulous Future</h3><ul>
+		<li/> New feature:  
+			Added EventListener and EventTrigger to allow easy extensions of our code later.
+		 (<i>Gabe Schine</i>)
+		<li/> Change:  
+			DataManager: can now store with a Schema definition an arbitrary set of parameters
+			for whatever is useful. Updated the Repository to use this method of storing extra
+			data.
+		 (<i>Gabe Schine</i>)
+		<li/> New feature: <a href="http://sourceforge.net/pm/task.php?func=detailtask&amp;group_id=82873&amp;group_project_id=37898&amp;project_task_id=102459">
+        			#102459</a> 
+			Added task-manager linkability to the changelog.
+		 (<i>Gabe Schine</i>)
 		<li/> Change:  
 			Added retrieval of $_FILES-type data to the RequestContext and RequestHandler classes.
 		 (<i>Gabe Schine</i>)
 		<li/> Change:  
 			Updated DR module to use new DataManager.
+		 (<i>Gabe Schine</i>)
+		<li/> Change: <a href="http://sourceforge.net/tracker/index.php?func=detail&amp;group_id=82873&amp;atid=567473&amp;aid=890779">
+        			#890779</a> 
+			DataManager now uses unique ids to reference fields instead of purely by label. 
 		 (<i>Gabe Schine</i>)
 		<li/> Bug Fix:
 	 
@@ -34,7 +50,8 @@
 			Added getStringName() to the Database interface and added a method in the DBHandler to allows access
 			to the string name based on the database index.
 		 (<i>Gabe Schine</i>)
-		<li/> Change:  
+		<li/> Change: <a href="http://sourceforge.net/pm/task.php?func=detailtask&amp;group_id=82873&amp;group_project_id=37898&amp;project_task_id=116890">
+        			#116890</a> 
 			All DataManager database queries now free() their results after processing.
 		 (<i>Gabe Schine</i>)
 		<li/> New feature:  
@@ -333,15 +350,18 @@
 			DateTime::toString() now has optional parameter to return a shorter M/D/Y for the date instead of Month DD, YYYY.
 		 (<i>Gabe Schine</i>)
 		<li/> Bug Fix:
-	 
+	<a href="http://sourceforge.net/pm/task.php?func=detailtask&amp;group_id=82873&amp;group_project_id=37898&amp;project_task_id=102455">
+        			#102455</a> 
 			AuthN queries now have slashes added to dbc query values.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	 
+	<a href="http://sourceforge.net/pm/task.php?func=detailtask&amp;group_id=82873&amp;group_project_id=37898&amp;project_task_id=102455">
+        			#102455</a> 
 			Shared queries now have slashes added to query values.
 		 (<i>Adam Franco</i>)
 		<li/> Bug Fix:
-	 
+	<a href="http://sourceforge.net/pm/task.php?func=detailtask&amp;group_id=82873&amp;group_project_id=37898&amp;project_task_id=102455">
+        			#102455</a> 
 			Globally added addslashes() calls to quoted values in query strings.
 		 (<i>Adam Franco</i>)
 		<li/> Change:  
